# Graph_CAD

./: .gitattributes  .gitignore  CLAUDE.md  README.md  hello.md  pyproject.toml  requirements-cloud-gpu.txt  requirements-dev.txt  requirements.txt
CAD/: block_slot_annot.STEP  block_slot_annot_100mm.STEP  block_slot_annot_blind.STEP  generate_blind_slot.py
data/: README.md
data/edit_data/: metadata.json
data/edit_data_legs/: metadata.json  (+2 more)
docs/: FUC.md  Faeno Phase 5 ammended.md  Faeno Phase 5.md  README.md  fixed_topology_poc_archive.md  graph-vae-architecture.md  latent-space-analysis-findings.md  phase-4.md  phase2_mlp_decoder_report.md  phase2_progress_log.md  phase3_transformer_decoder_report.md  phase4_multi_geometry_report.md  phase5_seed_parts.md  results.md  runpod-training.md  transfer-gitignored-files.md
graph_cad/: __init__.py
notebooks/: README.md
outputs/: param_fidelity_study.json  vae_asymmetry.json
scripts/: README.md  analyze_edit_data_bias.py  analyze_magnitude_spread.py  analyze_vae_asymmetry.py  diagnose_vae.py  evaluate_vae.py  evaluate_variable_vae.py  explore_instruction_domain.py  generate_edit_data.py  generate_edit_data_transformer.py  generate_l_brackets.py  generate_simple_edit_data.py  generate_variable_edit_data.py  infer_latent_editor.py  infer_phase4.py  study_inference_space.py  study_param_fidelity.py  test_tvae.py  train_feature_regressor.py  train_full_latent_regressor.py  train_hetero_vae.py  train_latent_editor.py  train_latent_regressor.py  train_llm_instruct.py  train_llm_pretrain.py  train_parameter_vae.py  train_regressor.py  train_transformer_vae.py  train_vae.py  train_variable_feature_regressor.py  train_variable_vae.py
tests/: __init__.py  conftest.py  test_transformer_decoder.py
(+166 files in other folders)
